# robotics-2110435

./: README.md  c1.txt  c1info.txt
aruco_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
aruco_ws/log/: latest_build
aruco_ws/src/aruco_controller/: .gitignore  CMakeLists.txt
aruco_ws/src/aruco_following_controller/launch/: static_tf.launch.py
challenge_1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
challenge_1/log/: latest_build
challenge_1/src/robot_marker/: package.xml  setup.cfg  setup.py
challenge_2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
challenge_2/log/: latest_build
challenge_2/src/challenge_2/: setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/log/: latest_build
robot_ws/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
robot_ws/src/log/: latest_build
robot_ws/src/turtle_pkg/: package.xml  setup.py
robot_ws/src/turtle_square_stm/: setup.cfg  setup.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/gscam/: CMakeLists.txt
tracking_ws/: start.bash
tracking_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tracking_ws/src/aruco_controller/: README.md
tracking_ws/src/aruco_following_controller/: setup.cfg  setup.py
tracking_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
tracking_ws/src/keyboard_control/: setup.py
tracking_ws/src/log/: latest_build
(+110 files in other folders)
